<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="left" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="i:menus.battleroom.gameoptions.aiDifficulty" />
            <Spinner android:theme="@style/SpinnerTheme" android:entries="@array/aidifficulty_array" android:id="@id/netgameoptions_aiDifficulty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:prompt="@string/aidifficulty_prompt" />
            <TextView android:id="@id/startingUnitsText" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="i:menus.battleroom.gameoptions.startingUnits" />
            <Spinner android:theme="@style/SpinnerTheme" android:entries="@array/startingUnits_array" android:id="@id/startingUnits" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:prompt="@string/startingUnits_prompt" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="i:menus.battleroom.gameoptions.fogMode" />
            <Spinner android:theme="@style/SpinnerTheme" android:entries="@array/fog_array" android:id="@id/fogMode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:prompt="@string/fog_prompt" />
            <CheckBox android:id="@id/revealedMap" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="i:menus.battleroom.gameoptions.startRevealed" />
            <TextView android:id="@id/startingCreditsText" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="i:menus.battleroom.gameoptions.startingCredits" />
            <Spinner android:theme="@style/SpinnerTheme" android:entries="@array/credits_array" android:id="@id/startingCredits" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:prompt="@string/credits_prompt" />
            <TextView android:id="@id/incomeMultiplierText" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="i:menus.battleroom.gameoptions.incomeMultiplier" />
            <Spinner android:theme="@style/SpinnerTheme" android:entries="@array/income_array" android:id="@id/incomeMultiplier" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:prompt="@string/income_prompt" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="i:menus.battleroom.gameoptions.setTeamLayout" />
            <Spinner android:theme="@style/SpinnerTheme" android:entries="@array/setTeams_array" android:id="@id/netgameoptions_setTeams" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:prompt="@string/setTeams_prompt" />
            <CheckBox android:id="@id/noNukes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="i:menus.battleroom.gameoptions.noNukes" />
            <CheckBox android:id="@id/sharedControl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="i:menus.battleroom.gameoptions.sharedControl" />
            <LinearLayout android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:id="@id/applyButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="i:menus.battleroom.gameoptions.apply" />
                <Button android:id="@id/cancelButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="i:menus.battleroom.gameoptions.cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
