<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="left" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Spinner android:theme="@style/SpinnerTheme" android:entries="@array/aidifficulty_array" android:layout_gravity="center" android:id="@id/aiDifficulty" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:prompt="@string/aidifficulty_prompt" />
            <Spinner android:theme="@style/SpinnerTheme" android:entries="@array/skirmish_ai_count" android:layout_gravity="center" android:id="@id/aiCount" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:prompt="@string/skirmish_ai_count_prompt" />
            <Spinner android:theme="@style/SpinnerTheme" android:entries="@array/skirmish_game_mode" android:layout_gravity="center" android:id="@id/gameMode" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:prompt="@string/skirmish_game_mode_prompt" />
            <LinearLayout android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:id="@id/applyButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Start" />
                <Button android:id="@id/advancedButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Advanced" />
                <Button android:id="@id/cancelButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
